# Implementation selection options
option('enable_endpoint_security', type : 'boolean', value : true, description : 'Enable EndpointSecurity framework (macOS only)')
option('enable_network_extension', type : 'boolean', value : true, description : 'Enable NetworkExtension framework (macOS only)')
option('enable_vpn_mimicry', type : 'boolean', value : false, description : 'Enable VPN mimicry stealth framework (macOS only)')
option('enable_ebpf', type : 'boolean', value : true, description : 'Enable eBPF-based monitoring (Linux only)')
option('enable_libpcap', type : 'boolean', value : true, description : 'Enable libpcap packet capture (cross-platform)')
option('enable_integrity_monitoring', type : 'boolean', value : false, description : 'Enable integrity monitoring thread (high risk feature)')
option('default_mode', type : 'string', value : 'network', description : 'Default monitoring mode (network|ebpf)')

# Granular obfuscation options (compile-time flags)
option('enable_function_pointer_obfuscation', type : 'boolean', value : false, description : 'Enable function pointer obfuscation')
option('enable_anti_disassembly', type : 'boolean', value : false, description : 'Enable anti-disassembly techniques')
option('enable_memory_scrambling', type : 'boolean', value : false, description : 'Enable memory scrambling')
option('enable_syscall_randomization', type : 'boolean', value : false, description : 'Enable syscall randomization')
option('enable_debugger_detection', type : 'boolean', value : false, description : 'Enable debugger detection')
option('enable_vm_detection', type : 'boolean', value : false, description : 'Enable virtual machine detection')
option('enable_env_checks', type : 'boolean', value : false, description : 'Enable environment checks')
option('enable_variant_generation', type : 'boolean', value : false, description : 'Enable code variant generation')
option('enable_string_obfuscation', type : 'boolean', value : false, description : 'Enable string obfuscation')
option('enable_timing_obfuscation', type : 'boolean', value : false, description : 'Enable timing obfuscation')
option('enable_direct_syscalls', type : 'boolean', value : false, description : 'Enable direct syscalls (high risk)')
option('enable_ptrace_protection', type : 'boolean', value : false, description : 'Enable ptrace protection (high risk)')
option('enable_anti_debug_ptrace', type : 'boolean', value : false, description : 'Enable anti-debug ptrace (high risk)')
option('enable_window_detection', type : 'boolean', value : false, description : 'Enable window-based debugger detection (requires screen recording permissions)')
option('enable_memory_protection', type : 'boolean', value : false, description : 'Enable memory protection using Mach kernel APIs (high risk)')
option('enable_runtime_introspection', type : 'boolean', value : false, description : 'Enable Objective-C runtime introspection (high risk)')
